Fixed some not responsive design

--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -11,7 +11,18 @@
 /* Medium phones: 480 to 767px */
 @media only screen and (max-width: 767px) {
     body { font-size: 17px; }
+    h1 { font-size: 150%; }
     .col { width: 100% }    /* Cols will stack */
+    .hero-buttons-bar { 
+        width: 50%;
+        float: right;
+        font-size: 90%;
+    }
+    
+    .social-media ion-icon {
+        font-size: 200%;
+    }
+    
 
 /* Small phones: 0 to 479px */
 @media only screen and (max-width: 479px) {
